[package]
name = "terrain_generator"
version = "0.0.1"
authors = ["Halvard Vegum <30663324+Havegum@users.noreply.github.com>"]
edition = "2018"
description = "Noise and voronoi-based terrain generation"
repository = "https://github.com/Havegum/Terrain-Generator"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# For simplex noise
bracket-noise = "0.8.1"
bracket-random = "0.8.0"

delaunator = "0.2.0"

# For serializing
# See https://rustwasm.github.io/docs/wasm-bindgen/reference/arbitrary-data-with-serde.html
serde = "^1.0.59"
serde_derive = "^1.0.59"

# For serializing
[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
